fixed the spacing of first project in projects section

--- a/style.css
+++ b/style.css
@@ -454,7 +454,7 @@ nav {
   font-weight: 700;
   color: var(--ghost-white);
   position: relative;
-  margin-bottom: 11rem;
+  margin-bottom: var(--section-vertical-padding);
 }
 
 .section-title::before {
@@ -544,7 +544,7 @@ nav {
   margin: 4rem 0 6rem 0;
 }
 
-.featured-project-name-wrapper:nth-of-type(2) {
+.featured-project-name-wrapper:nth-of-type(1) {
   margin-top: 0;
 }
 
@@ -1454,7 +1454,6 @@ footer p {
 
   .section-title {
     font-size: 2.2rem;
-    margin-bottom: 7rem;
   }
 
   .featured-project-name-wrapper {
